# Gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py
gendiff/lib/: config_parser.py  formatters.py  gendiff.py  plain.py  stylish.py
gendiff/lib/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/fixtures/: expected.json  expected.txt  expected_plain.txt  file1.yaml  file1_nested.yaml  file1_plain.json  file2.json  file2.yaml  file2_nested.json  file2_nested.yaml
tests/gendiff/: test_gendiff.py
